--- a/styles.css
+++ b/styles.css
@@ -34,12 +34,13 @@ main {
 	border-radius: 4px;
 	box-shadow: 0px 0px 4px gray;
 	margin: 8px;
-	padding: 8px;
+	padding-right: 12px;
+	padding-left: 20px;
 	min-width: 300px;
 	min-height: 400px;
 }
 .filtres h3 {
-	text-align: center;
+	
 }
 
 .fiches {
@@ -51,7 +52,7 @@ main {
 }
 .fiches article {
 	border: 1px solid black;
-	padding: 4px;
+	padding: 10px;
 }
 .fiches article img {
 	display: block;
@@ -65,4 +66,28 @@ main {
 }
 .fiches article h2 {
 	text-align: center;
+}
+
+.bouton-fiche {
+	margin-top: 20px !important;
+	margin-bottom: 10px !important;
+	background-color: rgb(255, 46, 46);
+	color: white;
+	padding: 10px 18px;
+	border: solid 1px transparent;
+	font-size: 15px;
+	border-radius: 50px;
+}
+
+.bouton-fiche:hover {
+	cursor: pointer;
+	background-color: white;
+	border: solid 1px rgb(255, 46, 46);
+	color: rgb(255, 46, 46);;
+}
+
+.fiches article button {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
