--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ main {
 .bouton-fiche {
 	margin-top: 20px !important;
 	margin-bottom: 10px !important;
-	background-color: rgb(255, 46, 46);
+	background-color: rgb(150, 5, 194);
 	color: white;
 	padding: 10px 18px;
 	border: solid 1px transparent;
@@ -79,14 +79,32 @@ main {
 .bouton-fiche:hover {
 	cursor: pointer;
 	background-color: white;
-	border: solid 1px rgb(255, 46, 46);
-	color: rgb(255, 46, 46);;
+	border: solid 1px rgb(150, 5, 194);
+	color: rgb(150, 5, 194);;
 }
 
 .fiches article button {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+.bouton-danger {
+	margin-top: 20px !important;
+	margin-bottom: 10px !important;
+	background-color: rgb(255, 111, 15);
+	color: white;
+	padding: 8px 18px;
+	border: solid 1px white;
+	font-size: 15px;
+	border-radius: 4px;
+}
+
+.bouton-danger:hover {
+	cursor: pointer;
+	background-color: rgb(255, 46, 46);
+	border: solid 1px rgb(255, 255, 255);
+	color: rgb(255, 255, 255);;
 }
 
 .submit {
